# Neural-Net-MNIST

./: .gitignore  README.md  main.py  pyproject.toml
mnist_NN_react_app/: .gitignore  README.md  classify_num_server.py  package.json
mnist_NN_react_app/src/: Canvas.css  Canvas.jsx
mnist_neural_net/: number_recognition.ipynb
mnist_neural_net/models/: mnist_model_v2_93_36.npz  mnist_model_v3_94_30_batched.npz  mnist_model_v4_94_57_batched.npz  mnist_model_v5_94_28_batched.npz
react_classification/react-classification-app/: classify_num_server.py  package-lock.json
react_classification/react-classification-app/src/: App.jsx  Canvas.css  Canvas.jsx
react_classification/react-classification-app/src/model_data/: mnist_model_v1_93_22.npz
